# LSEGPresentation

./: .gitignore  readme.md
3_Assembly/: main.cpp
5_StaticLibrary/: a.out  library.cpp  main.cpp
6_DinamicLibrary/: a.out  library.cpp  library.hpp
7_Makefile/: makefile
8_CMake/: CMakeLists.txt  library.cpp
LessonFour/: a.out  main.cpp  utils.cpp
LessonOne/: main.cpp  try.out  utilities.hpp
LessonTwo/: main.cpp  main.s
